@@ -1,3 +1,7 @@
+2016-08-31  Liu Xin  <meteor1113@qq.com>
+
+	* init/modules/init-tabbar.el: Don't load tabbar-ruler in daemon.
+
 2016-07-29  Liu Xin  <meteor1113@qq.com>
 
 	* init-emacs.el: Rename init.el to init-emacs.el
